syntax = "proto3";

package proto;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse { 
    string userId = 1;
    string email = 2;
    string address = 3;
    string token = 4;
    string latestLogin = 5;
    string message = 6;
}

message CreateRequest {
    string email = 1;
    string password = 2;
    string address = 3;
    string token = 4;
}

message CreateResponse { 
    string userId = 1;
    string email = 2;
    string address = 3;
    string message = 4;
}

message ReadAllRequest {
    string token = 1;
}

message ReadAllResponse {
    repeated ReadOneResponse users = 1;
    string message = 2;
}

message ReadOneRequest {
    string userId = 1;
    string token = 2;
}

message ReadOneResponse { 
    string userId = 1;
    string email = 2;
    string address = 3;
    string latestLogin = 4;
    string message = 5;
}

message UpdateRequest {
    string userId = 1;
    string email = 2;
    string password = 3;
    string address = 4;
    string token = 5;
}

message UpdateResponse { 
    string userId = 1;
    string email = 2;
    string address = 3;
    string message = 4;
}

message DeleteRequest {
    string userId = 1;
    string token = 2;
}

message DeleteResponse { 
    string message = 1;
}

service AddService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
    rpc ReadOne(ReadOneRequest) returns (ReadOneResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}